--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1>Mingalaba</h1>
+      <h1>Actions speak louder than words</h1>
       <a
         target="_blank"
         href="/rss.xml"
@@ -42,10 +42,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a>
 
       <p>
-        AstroPaper is a minimal, responsive, accessible and SEO-friendly Astro
-        blog theme. This theme follows best practices and provides accessibility
-        out of the box. Light and dark mode are supported by default. Moreover,
-        additional color schemes can also be configured.
+        大家好!欢迎来到我的个人博客。在这个博客里，我会写我的项目(我做什么/怎么做的)，我的个人经历，以及一些随机的东西。
       </p>
       <p>
         Read the blog posts or check
